# xe_robot_t-_h-nh_b-nh_omni

./: README.mdx
install/: local_setup.sh  setup.sh
install/agv_sim/share/agv_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/agv_sim/share/agv_sim/launch/: display.launch.py
install/agv_sim/share/agv_sim/meshes/: banhxe1_Link.STL  banhxe4_Link.STL  base_link.STL  dexe_Link.STL  lidarsaul.STL  lidartruocl.STL
install/agv_sim/share/agv_sim/urdf/: robotomni.urdf
install/agv_sim/share/agv_sim/worlds/: empty_mini.world
install/agv_sim/share/ament_index/resource_index/parent_prefix_path/: agv_sim
log/: latest_build
src/agv_sim/: CMakeLists.txt
src/agv_sim/config/: display.rviz
src/agv_sim/launch/: gazebo.launch.py
src/agv_sim/meshes/: banhxe2_Link.STL  banhxe3_Link.STL  thanxe_Link.STL
src/agv_sim/urdf/: robotomni.csv
